@@ -1,6 +1,13 @@
 2003-09-28  Bryce McKinlay  <bryce@mckinlay.net.nz>
 
-	* java/text/SimpleDateFormat (parse): Revert patch of 2003-09-25.
+	* java/text/DateFormat.java (format): Throw IllegalArgumentException
+	if `obj' is not a Number or Date instance.
+	* java/text/SimpleDateFormat.java (tokens): Make it an ArrayList
+	instead of Vector.
+
+2003-09-28  Bryce McKinlay  <bryce@mckinlay.net.nz>
+
+	* java/text/SimpleDateFormat.java (parse): Revert patch of 2003-09-25.
 	Don't call setTimeZone on calendar.
 
 2003-09-27  Michael Koch  <konqueror@gmx.de>
